--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
   "pydantic>=2.8.0",
   "pydantic-settings>=2.2.1",
   "python-dotenv>=1.0.1",
-  "httpx>=0.27.0"
+  "httpx>=0.27.0",
+  "jinja2>=3.1",
+  "python-multipart>=0.0.9"
 ]
 
 [tool.uvicorn]
