--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,16 @@
-aiofiles==24.1.0
-aiogram==3.22.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiosignal==1.4.0
-alembic==1.16.4
-amqp==5.3.1
-annotated-types==0.7.0
-anyio==4.10.0
-attrs==25.3.0
-billiard==4.2.1
-celery==5.5.3
-certifi==2025.8.3
-click==8.2.1
-click-didyoumean==0.3.1
-click-plugins==1.1.1.2
-click-repl==0.3.0
-fastapi==0.116.1
-frozenlist==1.7.0
-greenlet==3.2.4
-h11==0.16.0
-httpx==0.27.2
-idna==3.10
-kombu==5.5.4
-magic-filter==1.0.12
-Mako==1.3.10
-MarkupSafe==3.0.2
-multidict==6.6.4
-packaging==25.0
-prompt_toolkit==3.0.51
-propcache==0.3.2
-psycopg2-binary==2.9.10
-pydantic==2.11.7
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-redis==6.4.0
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.43
-starlette==0.47.2
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-tzdata==2025.2
-uvicorn==0.35.0
-vine==5.1.0
-wcwidth==0.2.13
-yarl==1.20.1
-jinja2>=3.1
-python-multipart>=0.0.9
+aiogram==3.13.1
+fastapi==0.104.1
+uvicorn==0.24.0
+sqlalchemy==2.0.23
+alembic==1.12.1
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
+redis==5.0.1
+celery==5.3.4
+jinja2==3.1.2
+aiofiles==23.2.1
+python-multipart==0.0.6
+yookassa==2.3.0
+httpx==0.25.2
