Implement deposit system with daily interest accrual and payment integration

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Bot Configuration
-BOT_TOKEN=8370158560:AAGvl9Z1930Ad7f2f42WfHmaB5ofFPToaKg
+BOT_TOKEN=your_bot_token
 ADMIN_USER_ID=your_telegram_user_id
 
 # Database Configuration
@@ -11,7 +11,12 @@ API_HOST=0.0.0.0
 API_PORT=8000
 SECRET_KEY=your-secret-key-here
 
-# Withdrawal Settings
+# YooKassa Configuration
+YOOKASSA_SHOP_ID=your_shop_id
+YOOKASSA_SECRET_KEY=your_secret_key
+YOOKASSA_TEST_MODE=true
+
+# System Settings
 MIN_WITHDRAWAL_AMOUNT=100
 ADMIN_PERCENTAGE=5
-WITHDRAWAL_DELAY_DAYS=7
+WITHDRAWAL_DELAY_DAYS=0
