--- a/env.example
+++ b/env.example
@@ -16,6 +16,19 @@ YOOKASSA_SHOP_ID=your_shop_id
 YOOKASSA_SECRET_KEY=your_secret_key
 YOOKASSA_TEST_MODE=true
 
+# PayMaster Configuration
+PAYMASTER_MERCHANT_ID=your_merchant_id
+PAYMASTER_SECRET_KEY=your_secret_key
+PAYMASTER_API_URL=https://paymaster.ru
+PAYMASTER_TEST_MODE=true
+
+# Ozon Pay Configuration
+OZON_CLIENT_ID=your_client_id
+OZON_CLIENT_SECRET=your_client_secret
+OZON_API_URL=https://api.ozon.ru
+OZON_TEST_MODE=true
+
+
 # System Settings
 MIN_WITHDRAWAL_AMOUNT=100
 ADMIN_PERCENTAGE=5
